eks-practice-materials/eks-example/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: simple-web
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: my-nginx
          image: nginx:1.25.4-alpine
          imagePullPolicy: Always
      restartPolicy: Always
