eks-practice-materials/eks-example/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: simple-web
  labels:
    app: webapp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webserver
  type: ClusterIP
